--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,3 +26,47 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.book, .col-md-12{
+  background:gray;
+  font-size:15px;
+  display:inline-block;
+  margin:4px;
+}
+
+input{
+  padding:5px;
+}
+
+form{
+  padding:5px;
+}
+
+nav{
+  margin:4px;
+  background:gray;
+}
+
+
+nav a {
+  width:100%;
+  text-decoration: none;
+  color:black;
+}
+
+ul li{
+  text-decoration: none;
+  list-style-type: none;
+}
+
+ul li:hover{
+  background:lightgray;
+  text-decoration: none;
+}
+
+a:visited{
+  text-decoration: none;
+}
+a:hover{
+  color:white;
+}
